--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+  <script type="text/javascript" src="utils.js"></script>
   <script type="text/javascript" src="api.js"></script>
   <script type="text/javascript" src="view.js"></script>
   <script type="text/javascript" src="index.js"></script>
@@ -139,5 +140,11 @@
         <img src="giphy.gif" alt="" />
       </div>
     </div>
+
+    <div id="table-cards-modal" class="modal">
+      <div class="content"></div>
+    </div>
+
+    <button class="zoom-btn"><i class="fa-solid fa-magnifying-glass-minus"></i></button>
   </body>
 </html>
