--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       <nav class="flex h-14 items-center text-sm font-medium container">
         <div class="flex w-full items-center justify-between">
           <div class="relative flex items-center gap-3">
-            <a class="flex space-x-1.5 focus:outline-none items-center focus-visible:ring-2" href="/public"
+            <a class="logo-auth flex space-x-1.5 focus:outline-none items-center focus-visible:ring-2""
               ><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 38 38" fill="none">
                 <rect width="38" height="38" rx="4.5" fill="#3178C6"></rect>
                 <path
@@ -62,7 +62,10 @@
             <h1
               class="animate__animated animate__rubberBand mb-10 mt-16 text-4xl font-bold tracking-tighter text-black dark:text-white sm:text-8xl"
             >
-              <span>Жир</span> <span class="text-red-600">Бёрнинг</span>
+              <div>
+                <span>Жир</span> <span class="text-red-600">Бёрнинг</span>
+                <img class="fire-pic" src="fire.gif" alt="" />
+              </div>
               <div class="text-3xl animate__animated animate__rubberBand h-full w-full transform-gpu month">АПРЕЛЬ</div>
             </h1>
 
