--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
   <script type="text/javascript" src="api.js"></script>
   <script type="text/javascript" src="view.js"></script>
   <script type="text/javascript" src="index.js"></script>
+  <script src="https://unpkg.com/fireworks-js@2.x/dist/index.umd.js" defer></script>
 
   <body>
     <header class="w-full">
