--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="stolen-styles.css" />
     <link rel="stylesheet" href="styles.css" />
 
-    <title>Burn</title>
+    <title>Read</title>
   </head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
@@ -64,10 +64,10 @@
               class="animate__animated animate__rubberBand mb-10 mt-16 text-4xl font-bold tracking-tighter text-black dark:text-white sm:text-8xl"
             >
               <div>
-                <span>Жир</span> <span class="text-red-600">Бёрнинг</span>
-                <img class="fire-pic" src="fire.gif" alt="" />
+                <span>Книжный</span> <span class="text-red-600">челлендж</span>
+                <img class="fire-pic" src="book-transparent.gif" alt="" />
               </div>
-              <div class="text-3xl animate__animated animate__rubberBand h-full w-full transform-gpu month">АПРЕЛЬ</div>
+              <div class="text-3xl animate__animated animate__rubberBand h-full w-full transform-gpu month">МАЙ</div>
             </h1>
 
             <div class="timer font-bold tracking-tighter" style="font-size: 20px">Осталось <span></span> дней</div>
@@ -121,16 +121,10 @@
       </div>
     </div>
     <div class="loader">
-      <div class="fire">
-        <div class="flames">
-          <div class="flame"></div>
-          <div class="flame"></div>
-          <div class="flame"></div>
-          <div class="flame"></div>
-        </div>
-      </div>
 
-      <h2 class="transform-gpu font-bold tracking-tighter">Начинаем жечь жир, подождите...</h2>
+      <img class="loader-pic" src="book-transparent.gif" alt="" />
+
+      <h2 class="transform-gpu font-bold tracking-tighter">Перелистываем, подождите...</h2>
     </div>
     <div id="noty-success" class="modal modal--noty">
       <div class="content">
