New book challenge aug-sep

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="stolen-styles.css" />
     <link rel="stylesheet" href="styles.css" />
 
-    <title>Read</title>
+    <title>Книжный челлендж</title>
   </head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
@@ -64,10 +64,10 @@
               class="animate__animated animate__rubberBand mb-10 mt-16 text-4xl font-bold tracking-tighter text-black dark:text-white sm:text-8xl"
             >
               <div>
-                <span>Книжный</span> <span class="text-red-600">челлендж</span>
+                <span>Книжный</span> <span class="text-red-600">челлендж</span> <span class="version">2.0</span>
                 <img class="fire-pic" src="book-transparent.gif" alt="" />
               </div>
-              <div class="text-3xl animate__animated animate__rubberBand h-full w-full transform-gpu month">МАЙ</div>
+              <div class="text-3xl animate__animated animate__rubberBand h-full w-full transform-gpu month">Август - Сентябрь</div>
             </h1>
 
             <div class="timer font-bold tracking-tighter" style="font-size: 20px">Осталось <span></span> дней</div>
