--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
                 <span>Книжный</span> <span class="text-red-600">челлендж</span> <span class="version">2.0</span>
                 <img class="fire-pic" src="book-transparent.gif" alt="" />
               </div>
-              <div class="text-3xl animate__animated animate__rubberBand h-full w-full transform-gpu month">Август - Сентябрь</div>
+              <div class="text-3xl animate__animated animate__rubberBand h-full w-full transform-gpu month date-range">Август - Сентябрь</div>
             </h1>
 
             <div class="timer font-bold tracking-tighter" style="font-size: 20px">Осталось <span></span> дней</div>
