--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="stolen-styles.css" />
     <link rel="stylesheet" href="styles.css" />
 
-    <title>Книжный челлендж</title>
+    <title>FatBurn челлендж</title>
   </head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
@@ -64,10 +64,10 @@
               class="animate__animated animate__rubberBand mb-10 mt-16 text-4xl font-bold tracking-tighter text-black dark:text-white sm:text-8xl"
             >
               <div>
-                <span>Книжный</span> <span class="text-red-600">челлендж</span> <span class="version">2.0</span>
+                <span>Жир</span><span class="text-red-600">бёрнинг </span> челлендж <span class="version">3.0</span>
                 <img class="fire-pic" src="book-transparent.gif" alt="" />
               </div>
-              <div class="text-3xl animate__animated animate__rubberBand h-full w-full transform-gpu month date-range">Август - Сентябрь</div>
+              <div class="text-3xl animate__animated animate__rubberBand h-full w-full transform-gpu month date-range">Октябрь - Ноябрь</div>
             </h1>
 
             <div class="timer font-bold tracking-tighter" style="font-size: 20px">Осталось <span></span> дней</div>
@@ -121,10 +121,8 @@
       </div>
     </div>
     <div class="loader">
-
-      <img class="loader-pic" src="book-transparent.gif" alt="" />
-
-      <h2 class="transform-gpu font-bold tracking-tighter">Перелистываем, подождите...</h2>
+      <img class="loader-pic" src="img/sit-loader.gif" alt="" />
+      <h2 class="transform-gpu font-bold tracking-tighter">Запускаем, подождите...</h2>
     </div>
     <div id="noty-success" class="modal modal--noty">
       <div class="content">
