--- a/public/index.html
+++ b/public/index.html
@@ -61,11 +61,11 @@
               class="absolute left-0 top-0 -z-10 hidden h-full w-full transform-gpu bg-gradient-to-r from-red-500 via-red-600 to-green-500 opacity-70 blur-3xl dark:block sm:opacity-40"
             ></div>
             <h1
-              class="animate__animated animate__rubberBand mb-10 mt-16 text-4xl font-bold tracking-tighter text-black dark:text-white sm:text-8xl"
+              class=" header animate__animated animate__rubberBand mb-10 mt-16 text-4xl font-bold tracking-tighter text-black dark:text-white sm:text-8xl"
             >
               <div>
                 <span>Жир</span><span class="text-red-600">бёрнинг </span> челлендж <span class="version">3.0</span>
-                <img class="fire-pic" src="book-transparent.gif" alt="" />
+                <img class="fire-pic" src="fire.gif" alt="" />
               </div>
               <div class="text-3xl animate__animated animate__rubberBand h-full w-full transform-gpu month date-range">Октябрь - Ноябрь</div>
             </h1>
