--- a/public/index.html
+++ b/public/index.html
@@ -18,18 +18,20 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" />
   <link rel="stylesheet" href="/resources/demos/style.css" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="
+  <link href="https://cdn.jsdelivr.net/npm/flipdown@0.3.2/dist/flipdown.min.css" rel="stylesheet">
+  <script defer src="https://cdn.tailwindcss.com"></script>
+  <script defer src="
   https://cdn.jsdelivr.net/npm/tailwindcss-animated@1.0.1/src/index.min.js
   "></script>
-  <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+  <script defer defer src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
-  <script type="module"  src="js/utils.js"></script>
-  <script type="module" src="js/api.js"></script>
-  <script type="module" src="js/view.js"></script>
-  <script type="module" src="js/index.js"></script>
-  <script src="https://unpkg.com/fireworks-js@2.x/dist/index.umd.js" defer></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+  <script defer  src="https://cdn.jsdelivr.net/npm/flipdown@0.3.2/src/flipdown.min.js"></script>
+  <script defer src="https://unpkg.com/fireworks-js@2.x/dist/index.umd.js" defer></script>
+  <script defer type="module"  src="js/utils.js"></script>
+  <script defer type="module" src="js/api.js"></script>
+  <script defer type="module" src="js/view.js"></script>
+  <script defer type="module" src="js/index.js"></script>
 
   <body>
     <header class="w-full">
@@ -61,7 +63,7 @@
               class="absolute left-0 top-0 -z-10 hidden h-full w-full transform-gpu bg-gradient-to-r from-red-500 via-red-600 to-green-500 opacity-70 blur-3xl dark:block sm:opacity-40"
             ></div>
             <h1
-              class=" header animate__animated animate__rubberBand mb-10 mt-16 text-4xl font-bold tracking-tighter text-black dark:text-white sm:text-8xl"
+              class=" header animate__animated animate__rubberBand mb-0 mt-16 text-4xl font-bold tracking-tighter text-black dark:text-white sm:text-8xl"
             >
               <div>
                 <span>Жир</span><span class="text-red-600">бёрнинг </span> челлендж <span class="version">3.0</span>
@@ -70,13 +72,13 @@
               <div class="text-3xl animate__animated animate__rubberBand h-full w-full transform-gpu month date-range">Ноябрь - Октябрь</div>
             </h1>
 
-            <div class="timer font-bold tracking-tighter" style="font-size: 20px">Осталось <span></span> дней</div>
+            <div class="font-bold tracking-tighter flipdown mb-10" id="main-countdown"></div>
           </div>
         </div>
         <div class="container main-content">
           <section
             id="cards"
-            class="w-[calc(100% + 8rem)] grid grid-cols-[repeat(1,240px)] justify-center gap-4 sm:px-8 md:-mx-16 md:grid-cols-[repeat(3,240px)] md:px-0 lg:mx-0 lg:w-full xl:grid-cols-[repeat(4,240px)] 2xl:gap-8"
+            class="w-[calc(100% + 8rem)] grid grid-cols-[repeat(1,280px)] justify-center gap-8 sm:px-8 md:-mx-16 md:grid-cols-[repeat(3,240px)] md:px-0 lg:mx-0 lg:w-full xl:grid-cols-[repeat(4,240px)] 2xl:gap-8"
           ></section>
         </div>
       </div>
@@ -141,6 +143,8 @@
       <div class="content"></div>
     </div>
 
-    <button class="zoom-btn"><i class="fa-solid fa-magnifying-glass-minus"></i></button>
+<!--    <button class="zoom-btn"><i class="fa-solid fa-magnifying-glass-minus"></i></button>-->
+    <button class="scroll-btn"><i class="fa-solid fa-arrow-down"></i></button>
+
   </body>
 </html>
