--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,10 @@
       <div class="flex flex-col gap-5 pb-8 md:gap-10 md:py-5">
         <div class="container">
           <div class="relative mx-auto w-fit text-center">
+            <video autoplay muted loop>
+              <source src="./video.mp4"  type="video/mp4">
+
+            </video>
             <div
               class="absolute left-0 top-0 -z-10 hidden h-full w-full transform-gpu bg-gradient-to-r from-red-500 via-red-600 to-green-500 opacity-70 blur-3xl dark:block sm:opacity-40"
             ></div>
