--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
       <div class="flex flex-col gap-5 pb-8 md:gap-10 md:py-5">
         <div class="container">
           <div class="relative mx-auto w-fit text-center">
-            <video autoplay muted loop>
+            <video autoplay muted loop playsinline>
               <source src="./video.mp4"  type="video/mp4">
 
             </video>
