--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
               class=" header animate__animated animate__rubberBand mb-0 mt-16 text-4xl font-bold tracking-tighter text-black dark:text-white sm:text-8xl"
             >
               <div>
-                <span>Жир</span><span class="text-red-600">бёрнинг </span> челлендж <span class="version">3.0</span>
+                <span>Сахарная</span><span class="text-red-600">аскеза </span> челлендж <span class="version">3.0</span>
                 <img class="fire-pic" src="img/fire.gif" alt="" />
               </div>
               <div class="text-3xl animate__animated animate__rubberBand h-full w-full transform-gpu month date-range">Ноябрь - Октябрь</div>
