--- a/public/index.html
+++ b/public/index.html
@@ -11,147 +11,119 @@
     <link rel="stylesheet" href="css/stolen-styles.css" />
     <link rel="stylesheet" href="css/styles.css" />
 
-    <title>FatBurn челлендж</title>
+    <title>Max</title>
   </head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&family=Rubik+Iso&display=swap" rel="stylesheet" />
+  <!-- <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet"
+  /> -->
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" />
   <link rel="stylesheet" href="/resources/demos/style.css" />
-  <link href="https://cdn.jsdelivr.net/npm/flipdown@0.3.2/dist/flipdown.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/flipdown@0.3.2/dist/flipdown.min.css" rel="stylesheet" />
   <script defer src="https://cdn.tailwindcss.com"></script>
-  <script defer src="
+  <script
+    defer
+    src="
   https://cdn.jsdelivr.net/npm/tailwindcss-animated@1.0.1/src/index.min.js
-  "></script>
-  <script  defer src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-  <script defer src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
-  <script defer  src="https://cdn.jsdelivr.net/npm/flipdown@0.3.2/src/flipdown.min.js"></script>
+  "
+  ></script> -->
+  <!-- <script defer src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script> -->
+  <!-- <script defer src="https://code.jquery.com/jquery-3.6.0.js"></script> -->
+  <!-- <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script> -->
+  <!-- <script defer src="https://cdn.jsdelivr.net/npm/flipdown@0.3.2/src/flipdown.min.js"></script> -->
   <script defer src="https://unpkg.com/fireworks-js@2.x/dist/index.umd.js" defer></script>
-  <script defer type="module"  src="js/utils.js"></script>
+  <!-- <script defer type="module" src="js/utils.js"></script>
   <script defer type="module" src="js/api.js"></script>
   <script defer type="module" src="js/view.js"></script>
-  <script defer type="module" src="js/index.js"></script>
+  <script defer type="module" src="js/index.js"></script> -->
 
   <body>
-    <header class="w-full">
-      <nav class="flex h-14 items-center text-sm font-medium container">
-        <div class="flex w-full items-center justify-between">
-          <div class="relative flex items-center gap-3">
-            <a class="logo-auth flex space-x-1.5 focus:outline-none items-center focus-visible:ring-2""
-              ><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 38 38" fill="none">
-                <rect width="38" height="38" rx="4.5" fill="#3178C6"></rect>
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M15.6947 20.9344H20V18H8V20.9344H12.2842V34H15.6947V20.9344Z"
-                  fill="white"
-                ></path>
-                <path d="M22 34V18H25.4511V24.6309H30.5405V18H34V34H30.5405V27.3458H25.4511V34H22Z" fill="white"></path>
-              </svg>
-              <div class="font-bold leading-3" id="name"></div
-            ></a>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <main class="flex-1">
-      <div class="flex flex-col gap-5 pb-8 md:gap-10 md:py-5">
-        <div class="container">
-          <div class="relative mx-auto w-fit text-center">
-            <video autoplay muted loop playsinline>
-              <source src="./video.mp4"  type="video/mp4">
+    <div class="l-wrap"><div class="loaderr"></div></div>
+    <div class="anim-item"><img src="img/temp/1.png" alt="" /></div>
+    <div class="anim-item"><img src="img/temp/2.png" alt="" /></div>
+    <div class="anim-item"><img src="img/temp/3.png" alt="" /></div>
+    <div class="anim-item"><img src="img/temp/4.png" alt="" /></div>
+    <div class="anim-item"><img src="img/temp/6.png" alt="" /></div>
 
-            </video>
-            <div
-              class="absolute left-0 top-0 -z-10 hidden h-full w-full transform-gpu bg-gradient-to-r from-red-500 via-red-600 to-green-500 opacity-70 blur-3xl dark:block sm:opacity-40"
-            ></div>
-            <h1
-              class=" header animate__animated animate__rubberBand mb-0 mt-16 text-4xl font-bold tracking-tighter text-black dark:text-white sm:text-8xl"
-            >
-              <div>
-                <span>Сахарный</span><span class="text-red-600"></span> челлендж <span class="version">3.0</span>
-                <img class="fire-pic" src="img/fire.gif" alt="" />
-              </div>
-              <div class="text-3xl animate__animated animate__rubberBand h-full w-full transform-gpu month date-range">Ноябрь - Октябрь</div>
-            </h1>
+    <div class="anim-item"><img src="img/temp/5.png" alt="" /></div>
 
-            <div class="font-bold tracking-tighter flipdown mb-10" id="main-countdown"></div>
-          </div>
-        </div>
-        <div class="container main-content">
-          <section
-            id="cards"
-            class="w-[calc(100% + 8rem)] grid grid-cols-[repeat(1,280px)] justify-center gap-8 sm:px-8 md:-mx-16 md:grid-cols-[repeat(3,240px)] md:px-0 lg:mx-0 lg:w-full xl:grid-cols-[repeat(4,240px)] 2xl:gap-8"
-          ></section>
-        </div>
+    <div class="say say-1">
+      <div class="text">"In nomine Patris, et Filii, et Spiritus Sancti</div>
+    </div>
+
+    <div class="say say-2">
+      <div class="text">Мы и Юля+Дима поздравляют тебя с днем рождения!</div>
+    </div>
+
+    <div class="say say-3">
+      <div class="text">
+        Чтобы получить подарок который был куплен на кассовые сборы
+        <br />
+        наших фильмов ответь на вопрос!
       </div>
-    </main>
+      <div class="text">В каком классе тебе пригодилось знание латыни?</div>
 
-    <div id="sticky" class="modal">
-      <div class="user-list">
-        <div class="user-list__item">
-          <div class="user-icon from-purple-500 to-pink-500 group bg-gradient-to-br">
-            &#127939;&#8205;&#9792;&#65039;
-          </div>
-          <button
-            class="relative inline-flex items-center justify-center p-0.5 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-500 to-pink-500 group-hover:from-purple-500 group-hover:to-pink-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-purple-200"
-          >
-            <span
-              data-user="2"
-              rel="modal:close"
-              class="user-btn relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0"
-            >
-              Юля
-            </span>
-          </button>
-        </div>
-
-        <div class="user-list__item">
-          <div class="user-icon from-purple-500 to-black-500 group bg-gradient-to-br">
-            &#127939;&#8205;&#9794;&#65039;
-          </div>
-
-          <button
-            class="relative inline-flex items-center justify-center p-0.5 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-600 to-blue-500 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800"
-          >
-            <span
-              rel="modal:close"
-              data-user="1"
-              class="user-btn relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0"
-            >
-              Дима
-            </span>
-          </button>
-        </div>
-      </div>
-    </div>
-    <div class="loader">
-      <img class="loader-pic" src="img/sit-loader.gif" alt="" />
-      <h2 class="transform-gpu font-bold tracking-tighter">Запускаем, подождите...</h2>
-    </div>
-    <div id="noty-success" class="modal modal--noty">
-      <div class="content">
-        <h1>Ты скала!</h1>
-        <img src="img/justdoit.gif" alt="" />
-      </div>
-    </div>
-    <div id="noty-fail" class="modal modal--noty">
-      <div class="content">
-        <h1>Постарайся в следующий раз!</h1>
-        <img src="img/giphy.gif" alt="" />
-      </div>
+      <input type="text" id="input" />
+      <button onclick="checkAnswer()">ok</button>
     </div>
 
-    <div id="table-cards-modal" class="modal">
-      <div class="content"></div>
-    </div>
+    <script>
+      function checkAnswer() {
+        const v = document.querySelector('#input').value;
 
-<!--    <button class="zoom-btn"><i class="fa-solid fa-magnifying-glass-minus"></i></button>-->
-    <button class="scroll-btn"><i class="fa-solid fa-arrow-down"></i></button>
+        console.log(v, btoa(v));
+        if (btoa(v) === 'MTA=') {
+          alert('Верно!');
 
+          document.querySelectorAll('.say').forEach((el) => el.remove());
+          const container = document.querySelector('body');
+          const fireworks = new Fireworks.default(container);
+          fireworks.start();
+
+          setTimeout(() => {
+            const button = document.createElement('a');
+            button.className = 'upload';
+            button.href = '/sert.pdf';
+            button.textContent = '🎁 Получить подарок!';
+            button.target = '_blank';
+            button.rel = 'noopener noreferrer';
+
+            button.download = 'document.pdf'; // Для скачивания вместо открытия
+
+            document.body.appendChild(button); // Добавление в body
+          }, 2000);
+        } else {
+          alert('Не верный ответ! Еще одна попытка, после твой сертификат сгорит!');
+        }
+      }
+      document.addEventListener('DOMContentLoaded', () => {
+        const images = [...document.querySelectorAll('img')];
+        const loadPromises = images.map(
+          (img) =>
+            new Promise((resolve) => {
+              if (img.complete) {
+                resolve();
+              } else {
+                img.onload = img.onerror = resolve;
+              }
+            })
+        );
+
+        Promise.all(loadPromises).then(() => {
+          // Здесь запускаем анимацию
+          setTimeout(() => {
+            document.body.classList.add('animation-ready');
+            document.querySelector('.l-wrap').remove();
+          }, 1000);
+          console.log('Все изображения загружены!');
+        });
+      });
+    </script>
   </body>
 </html>
