--- a/public/index.html
+++ b/public/index.html
@@ -51,10 +51,15 @@
     <div class="anim-item"><img src="img/temp/4.png" alt="" /></div>
     <div class="anim-item"><img src="img/temp/6.png" alt="" /></div>
 
-    <div class="anim-item"><img src="img/temp/5.png" alt="" /></div>
+    <div class="anim-item neo"><img src="img/temp/5.png" alt="" /></div>
+
+    <div class="say say-0">
+      <div class="text">"Пацаны у Макса днюха!</div>
+    </div>
 
     <div class="say say-1">
       <div class="text">"In nomine Patris, et Filii, et Spiritus Sancti</div>
+      <div class="text">Давайте его поздравим!</div>
     </div>
 
     <div class="say say-2">
@@ -77,7 +82,6 @@
       function checkAnswer() {
         const v = document.querySelector('#input').value;
 
-        console.log(v, btoa(v));
         if (btoa(v) === 'MTA=') {
           alert('Верно!');
 
@@ -86,6 +90,7 @@
           const fireworks = new Fireworks.default(container);
           fireworks.start();
 
+          document.querySelector('.neo').classList.add('finish');
           setTimeout(() => {
             const button = document.createElement('a');
             button.className = 'upload';
@@ -120,7 +125,11 @@
           setTimeout(() => {
             document.body.classList.add('animation-ready');
             document.querySelector('.l-wrap').remove();
-          }, 1000);
+
+            setTimeout(() => {
+              document.querySelectorAll('.say-0').forEach((el) => el.remove());
+            }, 2000);
+          }, 3000);
           console.log('Все изображения загружены!');
         });
       });
