--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
             const button = document.createElement('a');
             button.className = 'upload';
             button.href = '/sert.pdf';
-            button.textContent = '🎁 Получить подарок!';
+            button.textContent = '🎁 Получить подарок и стать рабом вещей!';
             button.target = '_blank';
             button.rel = 'noopener noreferrer';
 
