--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     <div class="anim-item neo"><img src="img/temp/5.png" alt="" /></div>
 
     <div class="say say-0">
-      <div class="text">"Пацаны у Макса днюха!</div>
+      <div class="text">"Бля пацаны у Макса днюха!</div>
     </div>
 
     <div class="say say-1">
